--- a/jeux-de-cartes.html
+++ b/jeux-de-cartes.html
@@ -7,10 +7,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Let's Play - Jeux de cartes</title>
-
+  <link rel="stylesheet" href="css/style3.css">
+  <title>Let'sPlay - Jeux de cartes</title>
 </head>
+
 
 <body>
 
@@ -126,61 +126,109 @@
     </nav>
   </header>
 
-  <main>
-    <div class="wrapper">
-      <p class="sectionTitle text-white text-center">Nos jeux de cartes</p>
-      <!-- Todo : finir le wrapper avant midi, faire les titres et pagination -->
-      <div class="d-flex row justify-content-center">
-        <div class="card col-lg-3">
-          <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card card col-lg-3">
-          <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card card col-lg-3">
-          <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
+  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-        <div class="card card col-lg-3">
-          <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <div class="card card col-lg-3">
-          <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+        <div class="carousel-caption d-none d-md-block">
+          <p class="offre">Offre de bienvenue</p>
+          <p class="vingt">20% de réduction sur votre première commande</p>
+          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
         </div>
       </div>
+
+      <div class="carousel-item">
+        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+      </div>
+
+
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+      </div>
     </div>
+  </div>
+
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+  </div>
+
+
+  <div class="titre text-center mt-5 text-white">
+    <h1>Jeux de cartes</h1>
+  </div>
+
+  <div class="listcard1 text-center row justify-content-evenly mt-4">
+    <div class="card border-4 p-2" style="width: 18rem;">
+      <img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Image dobble">
+      <div class="card-body">
+        <h5 class="card-title text-white">Dobble</h5>
+        <p class="card-text text-white">Jeu de rapidité | Dès 8 ans | 2 à 8 joueurs | 15 min</p>
+        <p>14€99</p>
+        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      </div>
+    </div>
+
+
+    <div class="card border-4 p-2" style="width: 18rem;">
+      <img src="img/jeuxdecartes/loup garou1.jpeg" class="card-img-top" alt="Image Loup garou">
+      <div class="card-body">
+        <h5 class="card-title text-white">Loup Garou</h5>
+        <p class="card-text text-white">Jeu de société | Dès 10 ans | 8 à 18 joueurs | 30 min</p>
+        <p>15€90</p>
+        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      </div>
+    </div>
+
+
+    <div class="card border-4 p-2" style="width: 18rem;">
+      <img src="img/jeuxdecartes/Uno3.jpg" class="card-img-top" alt="Image uno">
+      <div class="card-body">
+        <h5 class="card-title text-white">Uno</h5>
+        <p class="card-text text-white">Jeu de cartes | Dès 7 ans | 2 à 4 joueurs | 30 min </p>
+        <p>10€99</p>
+        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="listcard2  text-center row justify-content-evenly mt-5">
+    <div class="card border-4 p-2" style="width: 18rem;">
+      <img src="img/jeuxdecartes/skyjo2.jpeg" class="card-img-top" alt="Image Skyjo">
+      <div class="card-body">
+        <h5 class="card-title text-white">Skyjo</h5>
+        <p class="card-text text-white">Jeu de cartes | Dès 8 ans | 8 joueurs| 15 min</p>
+        <p>21€90</p>
+        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      </div>
+    </div>
+
+
+    <div class="card border-4 p-2" style="width: 18rem;">
+      <img src="img/jeuxdecartes/qui prend1.jpeg" class="card-img-top" alt="Image 6 qui prends">
+      <div class="card-body">
+        <h5 class="card-title text-white">6 qui prend</h5>
+        <p class="card-text text-white">Jeu de cartes | Dès 10 ans | 2 à 10 joueurs | 45 minutes</p>
+        <p>13€99</p>
+        <a href="#" class="btn3 text-dark">Voir Plus</a>
+      </div>
+    </div>
+  </div>
+
   </main>
+
+  </section>
+
   <div class="b-example-divider"></div>
   <div class="container">
     <footer class="py-3 my-4">
@@ -194,10 +242,11 @@
     </footer>
   </div>
 
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
