--- a/unjeudecarte.html
+++ b/unjeudecarte.html
@@ -1,224 +1,229 @@
 <<!DOCTYPE html>
-<html lang="fr">
+  <html lang="fr">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/style5.css">
-  <title>Let's Play - Dobble </title>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/style5.css">
+    <title>Let's Play - Dobble </title>
 
-</head>
+  </head>
 
-<body>
+  <body>
 
-  <header>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <div class="warp" aria-labelledby="warp-label">
-          <span id="warp-label" class="warp__placeholder">
-            Let's Play !
-          </span>
+    <header>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <div class="warp" aria-labelledby="warp-label">
+            <span id="warp-label" class="warp__placeholder">
+              Let's Play !
+            </span>
 
-          <span aria-role="presentation">
-            <span class="warp__0">
-              L
-            </span>
-            <span class="warp__1">
-              e
-            </span>
-            <span class="warp__2">
-              t
-            </span>
-            <span class="warp__3">
-              '
-            </span>
-            <span class="warp__4">
-              s
-            </span>
-            <span class="warp__5">
+            <span aria-role="presentation">
+              <span class="warp__0">
+                L
+              </span>
+              <span class="warp__1">
+                e
+              </span>
+              <span class="warp__2">
+                t
+              </span>
+              <span class="warp__3">
+                '
+              </span>
+              <span class="warp__4">
+                s
+              </span>
+              <span class="warp__5">
 
-            </span>
-            <span class="warp__6">
-              P
-            </span>
-            <span class="warp__7">
-              l
-            </span>
-            <span class="warp__8">
-              a
-            </span>
-            <span class="warp__9">
-              y
-            </span>
-            <span class="warp__10">
+              </span>
+              <span class="warp__6">
+                P
+              </span>
+              <span class="warp__7">
+                l
+              </span>
+              <span class="warp__8">
+                a
+              </span>
+              <span class="warp__9">
+                y
+              </span>
+              <span class="warp__10">
 
+              </span>
+              <span class="warp__11">
+                !
+              </span>
             </span>
-            <span class="warp__11">
-              !
-            </span>
-          </span>
-        </div>
-        <a class="navbar-brand" href="#">
-          <img class="logo" src="img/logo-lesplay.png">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                JEUX
-              </a>
-              <ul class="dropdown-menu">
-                <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
-                <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
-                <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                PROMOS
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
-                <li><a class="dropdown-item" href="#">Offres du moment</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link">PANIER</a>
-            </li>
-          </ul>
-
-          <div class="d-flex">
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
-              <button class="btn2" type="submit">Rechercher</button>
-            </form>
+          </div>
+          <a class="navbar-brand" href="#">
+            <img class="logo" src="img/logo-lesplay.png">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">ACCUEIL</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                   aria-expanded="false">
-                  PROFIL
+                  JEUX
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Enregistrement</a></li>
-                  <li><a class="dropdown-item" href="#">Connexion</a></li>
-                  <li><a class="dropdown-item" href="#">Mon compte</a></li>
-                  <li><a class="dropdown-item" href="#">Mes commandes</a></li>
-                  <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
-                  <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                  <li><a href="jeux-de-des.html" target="_blank" class="dropdown-item">Jeux de dés</a></li>
+                  <li><a class="dropdown-item" href="jeux-de-cartes.html" target="_blank">Jeux de cartes</a></li>
+                  <li><a class="dropdown-item" href="jeux-de-plateau.html" target="_blank">Jeux de plateaux</a></li>
                 </ul>
               </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  PROMOS
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Offre de bienvenue</a></li>
+                  <li><a class="dropdown-item" href="#">Offres du moment</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">PANIER</a>
+              </li>
             </ul>
+
+            <div class="d-flex">
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Rechercher un article" aria-label="Search">
+                <button class="btn2" type="submit">Rechercher</button>
+              </form>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    PROFIL
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Enregistrement</a></li>
+                    <li><a class="dropdown-item" href="#">Connexion</a></li>
+                    <li><a class="dropdown-item" href="#">Mon compte</a></li>
+                    <li><a class="dropdown-item" href="#">Mes commandes</a></li>
+                    <li><a class="dropdown-item" href="#">Liste de souhaits</a></li>
+                    <li><a class="dropdown-item" href="#">Déconnexion</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
+    <div id="carouselExampleCaptions" class="d-lg-block carousel slide mx-auto mt-4">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="offre">Offre de bienvenue</p>
-          <p class="vingt">20% de réduction sur votre première commande</p>
-          <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/twenty-percent-off-1424812_640.png" class="d-block" alt="20%">
+          <div class="carousel-caption d-none d-md-block">
+            <p class="offre">Offre de bienvenue</p>
+            <p class="vingt">20% de réduction sur votre première commande</p>
+            <p><a class="btn btn-lg" href="#">Enregistrement</a></p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
+          <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+        </div>
+
+
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
         </div>
       </div>
+    </div>
 
-      <div class="carousel-item">
-        <img src="img/limited-time-offer-1438906_640.png" class="d-block" alt="moitieprix">
-        <p>Du 23 septembre au 7 octobre 2023, pour l'achat d'un jeu, le 2ème est à moitié prix.</p>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    </div>
+
+    <div class="d-flex row justify-content-center">
+
+      <div class="card border-4 col-lg-5">
+        <img src="img/jeuxdedes/strike.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Strike">
+        <ul class="images row list-group-flush">
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+          <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
+              alt="Strike"></li>
+        </ul>
       </div>
 
-
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
+      <div class="card col-lg-5">
+        <div class="card-body">
+          <h5 class="card-title"> Strike</h5>
+          <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+          <p class="card-text">31 dés | 1 arène |1 tapis en mousse
+            <br>
+            <br>
+            Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
+            cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans
+            l'arène.
+            Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que
+            vous
+            le souhaitez ! Stop ou encore ? A vous de décider !
+            <br>
+            <br>
+            Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
+            Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
+            lice pour être consacré "Grand vainqueur de l'arène" ?
+          </p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-
-
-
-  <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdecartes/dobble1.jpeg" class="card-img-top" alt="Strike">
-    <ul class="images row list-group-flush">
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-    </ul>
-  </div>
-
-  <div class="largeur"><div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title"> Dobble</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-      <p class="card-text">31 dés | 1 arène |1 tapis en mousse
-        <br>
-        <br>
-        Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-        cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
-        Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que vous
-        le souhaitez ! Stop ou encore ? A vous de décider !
-        <br>
-        <br>
-        Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-        Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-        lice pour être consacré "Grand vainqueur de l'arène" ?</p>
+    <div class="d-flex row justify-content-center">
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
+      <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
     </div>
-  </div>
-
-   <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
-    <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
-  </div>
 
 
+    <div class="b-example-divider"></div>
+    <div class="container">
+      <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+          <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
+      </footer>
+    </div>
 
-  <div class="b-example-divider"></div>
-  <div class="container">
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-muted">Contact</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">CGU</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Mentions légales</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-      </ul>
-      <p class="text-center text-muted">&copy; 2023 Teams Ln ELoann Benjamin</p>
-    </footer>
-  </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+  </body>
 
-</body>
-
-</html>
+  </html>
