--- a/unjeudedes.html
+++ b/unjeudedes.html
@@ -165,42 +165,46 @@
 
 
 
-  <div class="card border-4" style="width: 18rem;">
-    <img src="img/jeuxdedes/strike.jpeg" class="card-img-top" alt="Strike">
-    <ul class="images row list-group-flush">
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-      <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
-          alt="Strike"></li>
-    </ul>
-  </div>
+  <div class="d-flex row justify-content-center">
 
-  <div class="largeur"><div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title"> Strike</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
-      <p class="card-text">31 dés | 1 arène |1 tapis en mousse
-        <br>
-        <br>
-        Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
-        cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
-        Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que vous
-        le souhaitez ! Stop ou encore ? A vous de décider !
-        <br>
-        <br>
-        Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
-        Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
-        lice pour être consacré "Grand vainqueur de l'arène" ?</p>
+    <div class="card border-4 col-lg-5">
+      <img src="img/jeuxdedes/strike.jpeg" class="card-img-top w-50 h-50 mx-auto" alt="Strike">
+      <ul class="images row list-group-flush">
+        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike-espritjeu.jpg" class="card-img-top"
+            alt="Strike"></li>
+        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike3-espritjeu.jpg" class="card-img-top"
+            alt="Strike"></li>
+        <li class="list-group-item col m-1"><img src="img/jeuxdedes/strike2-espritjeu.jpg" class="card-img-top"
+            alt="Strike"></li>
+      </ul>
+    </div>
+
+    <div class="card col-lg-5">
+      <div class="card-body">
+        <h5 class="card-title"> Strike</h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">Contenu/Présentation</h6>
+        <p class="card-text">31 dés | 1 arène |1 tapis en mousse
+          <br>
+          <br>
+          Une arène, une bonne poignée de dés chacun et surtout la volonté d'en gagner plus ! Voici le
+          cocktail explosif que Strike nous propose. Lancez votre dé avec dextérité sur ceux déjà présents dans l'arène.
+          Obtenez au moins deux faces identiques et remportez les dés correspondants. Recommencez autant de fois que
+          vous
+          le souhaitez ! Stop ou encore ? A vous de décider !
+          <br>
+          <br>
+          Mais attention : aucune face identique et vos dés restent dans l'arène, une croix et ils sont éliminés !
+          Remportez tous les dés et le joueur suivant sera obligé de tenter le Grand Lancer ! Qui réussira à rester en
+          lice pour être consacré "Grand vainqueur de l'arène" ?
+        </p>
+      </div>
     </div>
   </div>
 
-   <div class="boutons"><a href="#" class="card-link">Ajouter au panier</a>
-    <a href="#" class="card-link">Ajouter à ma liste de souhaits</a>
+  <div class="d-flex row justify-content-center">
+    <a href="#" class="card-link col-lg-3 text-center">Ajouter au panier</a>
+    <a href="#" class="card-link col-lg-3 text-center">Ajouter à ma liste de souhaits</a>
   </div>
-
-
 
   <div class="b-example-divider"></div>
   <div class="container">
